--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base{
+	html {
+		font-family: 'Monserrat', sans-serif;
+	}
+
+	h1,h2,h3 {
+		font-family: 'Roboto', sans-serif;
+	}
+}
 
 h1 {
 	color: red;
