--- a/src/input.css
+++ b/src/input.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
+@layer base {
 	html {
 		font-family: 'Montserrat', sans-serif;
 	}
@@ -12,6 +12,33 @@
 	}
 }
 
-h1 {
-	color: red;
+.owl-theme .owl-nav [class*='owl-']:hover {
+	background: none;
+}
+
+.owl-prev, .owl-next {
+	@apply absolute top-1/2 -translate-y-1/2 text-white border-none cursor-pointer;
+}
+
+.owl-prev button, .owl-next button {
+	@apply h-auto w-auto p-2;
+}
+
+.owl-prev span, .owl-next span {
+	@apply block  border-secondary-light h-4 w-4 lg:h-10 lg:w-10 text-white rotate-45 border-4 border-t-0 border-r-0 hover:scale-110 duration-150 hover:brightness-150;
+}
+
+.owl-next span {
+	@apply rotate-[225deg]
+}
+
+.owl-prev {
+	@apply lg:-left-[200px] left-1 top-1/3;
+}
+.owl-next {
+	@apply lg:-right-[200px] right-1 top-1/3;
+}
+
+.glow {
+	text-shadow: 0px 0px 20px #FFFFFF;
 }
