--- a/src/input.css
+++ b/src/input.css
@@ -70,7 +70,7 @@
   }
   
   .crew-button.active.active-animation::after {
-	width: 100%;
+	@apply md:w-full left-1/2 w-1/3 -translate-x-1/2
   }
   
   /* Mengaktifkan animasi saat elemen menjadi aktif */
