--- a/src/input.css
+++ b/src/input.css
@@ -43,6 +43,10 @@
 	text-shadow: 0px 0px 20px #FFFFFF;
 }
 
+.glow-sm {
+	text-shadow: 0px 0px 15px #FFFFFF;
+}
+
 #crew .item .flex div {
 	@apply gap-2 md:gap-4
 }
